Add feature event action from doctor page

--- a/src/klinikuntan/Doctor.form
+++ b/src/klinikuntan/Doctor.form
@@ -115,19 +115,14 @@
                               <Component id="textKdPemeriksaanDokter" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="textHargaPemeriksaanDoctor" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="labelKodePemeriksaan4" alignment="1" min="-2" max="-2" attributes="0"/>
-                          </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                  <Component id="labelDiagnosa2" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                  <Component id="scrollPaneDiagnosaPemeriksaan" min="-2" pref="283" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="labelKodePemeriksaan4" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="textHargaPemeriksaanDoctor" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="labelDiagnosa2" min="-2" max="-2" attributes="0"/>
+                              <Component id="scrollPaneDiagnosaPemeriksaan" alignment="0" min="-2" pref="283" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="19" max="32767" attributes="0"/>
                           <Component id="buttonDiagnosaPemeriksaan" min="-2" max="-2" attributes="0"/>
@@ -159,6 +154,9 @@
                       <Dimension value="[300, 25]"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="textKdPemeriksaanDokterMouseClicked"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="buttonDiagnosaPemeriksaan">
                   <Properties>
@@ -349,7 +347,7 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTextArea" name="jTextArea2">
+                    <Component class="javax.swing.JTextArea" name="textAreaDeskripsi">
                       <Properties>
                         <Property name="columns" type="int" value="20"/>
                         <Property name="rows" type="int" value="5"/>
@@ -456,6 +454,9 @@
                       <Dimension value="[80, 25]"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonCetakResepDoctorActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
