--- a/src/klinikuntan/Admin.form
+++ b/src/klinikuntan/Admin.form
@@ -2725,11 +2725,13 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="labelDiagnosa" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="labelKeluhan" alignment="1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelKeluhan2" alignment="1" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="textDiagnosaPemeriksaan" alignment="0" pref="303" max="32767" attributes="0"/>
                                       <Component id="textKeluhanPemeriksaan" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="hargaPemeriksaan" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
@@ -2780,7 +2782,12 @@
                               <Component id="labelKeluhan" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="textKeluhanPemeriksaan" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="239" max="32767" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="labelKeluhan2" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="hargaPemeriksaan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace pref="196" max="32767" attributes="0"/>
                           <Component id="buttonTambahPemeriksaan" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
@@ -2880,6 +2887,21 @@
                     </Property>
                   </Properties>
                 </Component>
+                <Component class="javax.swing.JLabel" name="labelKeluhan2">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Harga"/>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[90, 25]"/>
+                    </Property>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JTextField" name="hargaPemeriksaan">
+                  <Properties>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[300, 25]"/>
+                    </Property>
+                  </Properties>
+                </Component>
               </SubComponents>
             </Container>
             <Container class="javax.swing.JPanel" name="panelPerbaruiPemeriksaan">
@@ -2898,19 +2920,21 @@
                           <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="labelNikPasienPemeriksaan1" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-                                  <Component id="textNIKPasienPemeriksaan1" pref="303" max="32767" attributes="0"/>
+                                  <Component id="labelNikPasienPemeriksaan1" min="-2" pref="103" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="upKodePemeriksaan" pref="303" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="labelDiagnosa1" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="labelKeluhan1" alignment="1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelKeluhan3" alignment="1" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="textDiagnosaPemeriksaan1" alignment="0" pref="303" max="32767" attributes="0"/>
                                       <Component id="textKeluhanPemeriksaan1" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="upHargaPemeriksaan" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
@@ -2922,6 +2946,11 @@
                                   <Component id="labelIDKaryawanPemeriksaan1" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                                   <Component id="textIDKaryawanPemeriksaan1" pref="303" max="32767" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <Component id="labelNikPasienPemeriksaan2" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                                  <Component id="textNIKPasienPemeriksaan2" pref="303" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="167" max="-2" attributes="0"/>
@@ -2939,7 +2968,12 @@
                           <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="labelNikPasienPemeriksaan1" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="textNIKPasienPemeriksaan1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="upKodePemeriksaan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="labelNikPasienPemeriksaan2" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="textNIKPasienPemeriksaan2" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -2961,7 +2995,12 @@
                               <Component id="labelKeluhan1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="textKeluhanPemeriksaan1" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="239" max="32767" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="labelKeluhan3" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="upHargaPemeriksaan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace pref="121" max="32767" attributes="0"/>
                           <Component id="buttonPerbaruiPemeriksaan" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
@@ -2971,7 +3010,7 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="labelNikPasienPemeriksaan1">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="NIK Pasien"/>
+                    <Property name="text" type="java.lang.String" value="Kode Pemeriksaan"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[90, 25]"/>
                     </Property>
@@ -3009,7 +3048,7 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="textNIKPasienPemeriksaan1">
+                <Component class="javax.swing.JTextField" name="upKodePemeriksaan">
                   <Properties>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[300, 25]"/>
@@ -3055,6 +3094,36 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="textKeluhanPemeriksaan1">
+                  <Properties>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[300, 25]"/>
+                    </Property>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="labelNikPasienPemeriksaan2">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="NIK Pasien"/>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[90, 25]"/>
+                    </Property>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JTextField" name="textNIKPasienPemeriksaan2">
+                  <Properties>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[300, 25]"/>
+                    </Property>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="labelKeluhan3">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Harga"/>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[90, 25]"/>
+                    </Property>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JTextField" name="upHargaPemeriksaan">
                   <Properties>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[300, 25]"/>
