--- a/src/klinikuntan/Admin.form
+++ b/src/klinikuntan/Admin.form
@@ -3915,6 +3915,9 @@
                       <Dimension value="[90, 25]"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonTambahShift1ActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="labelWaktuTambah3">
                   <Properties>
